<resources>
    <string name="app_name">AlphaTrace</string>

    <string name="splash_phrase">alphabet tracing for everyone</string>
    <string name="version">Version 1.0</string>
    <string name="loading">Loading&#8230;</string>
    <string name="welcome">Welcome to AlphaTrace!</string>
    <string name="selected_font" translatable="false">fonts/CookieMonster.ttf</string>
    <string name="crayons_font" translatable="false">fonts/CrayonCrumble.ttf</string>
    <string name="klinic_slab_font" translatable="false">fonts/KlinicSlabBold.otf</string>
    <string name="action_settings">Settings</string>
    <string name="correct">Correct trace: </string>
    <string name="not_recognized">Letter not recognized, please try again&#8230;</string>
    <string name="missed">Ups, letter %s with some missed spot(s)&#8230;</string>
    <string name="complete">Hurray! You have finished the letter %s!</string>
    <string name="current_letter">You are on the letter</string>
    <string name="secs">secs</string>
    <string name="best_score">Your best score:</string>
    <string name="worst_score">Your worst score:</string>

    <!-- Menu strings -->
    <string name="a">a</string>
    <string name="small_letters">small letters</string>
    <string name="A">A</string>
    <string name="capital_letters">capital letters</string>
    <string name="cat">cat</string>
    <string name="small_words">small words</string>
    <string name="miracle">miracle</string>
    <string name="big_words">big words</string>
    <string name="madrid">Madrid</string>
    <string name="capital_cities">capital cities</string>
    <string name="like_football">I like football</string>
    <string name="small_sentences">small sentences</string>

    <string-array name="letters">
        <item>a</item>
        <item>b</item>
        <item>c</item>
        <item>d</item>
        <item>e</item>
        <item>f</item>
        <item>g</item>
        <item>h</item>
        <item>i</item>
        <item>j</item>
        <item>k</item>
        <item>l</item>
        <item>m</item>
        <item>n</item>
        <item>o</item>
        <item>p</item>
        <item>q</item>
        <item>r</item>
        <item>s</item>
        <item>t</item>
        <item>u</item>
        <item>v</item>
        <item>w</item>
        <item>x</item>
        <item>y</item>
        <item>z</item>
    </string-array>

    <string-array name="arrow_letters">
        <item>arrow_a</item>
        <item>arrow_b</item>
        <item>arrow_c</item>
        <item>arrow_d</item>
        <item>arrow_e</item>
        <item>arrow_f</item>
        <item>arrow_g</item>
        <item>arrow_h</item>
        <item>arrow_i</item>
        <item>arrow_j</item>
        <item>arrow_k</item>
        <item>arrow_l</item>
        <item>arrow_m</item>
        <item>arrow_n</item>
        <item>arrow_o</item>
        <item>arrow_p</item>
        <item>arrow_q</item>
        <item>arrow_r</item>
        <item>arrow_s</item>
        <item>arrow_t</item>
        <item>arrow_u</item>
        <item>arrow_v</item>
        <item>arrow_w</item>
        <item>arrow_x</item>
        <item>arrow_y</item>
        <item>arrow_z</item>
    </string-array>
</resources>
