<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.30"
        android:orientation="horizontal">
        <RelativeLayout
            android:id="@+id/menu_button_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/green_vivid_color">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
            <TextView
                android:id="@+id/text_menu_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/menu_big_letters"
                android:text="@string/a"
                android:textColor="@android:color/white"
                android:layout_centerHorizontal="true" />
                <TextView
                    android:id="@+id/text_submenu_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_menu_1"
                    android:text="@string/small_letters"
                    android:textSize="@dimen/menu_small_letters"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/menu_button_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/gesture_line_color">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                >
                <TextView
                    android:id="@+id/text_menu_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/menu_big_letters"
                    android:text="@string/A"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:id="@+id/text_submenu_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_menu_2"
                    android:text="@string/capital_letters"
                    android:textSize="@dimen/menu_small_letters"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.30"
        android:orientation="horizontal">
        <RelativeLayout
            android:id="@+id/menu_button_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/orange_color">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/text_menu_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/menu_big_letters"
                    android:text="@string/cat"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:id="@+id/text_submenu_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_menu_3"
                    android:text="@string/small_words"
                    android:textSize="@dimen/menu_small_letters"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/menu_button_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/pinkish_color">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/text_menu_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/menu_big_letters"
                    android:text="@string/miracle"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:id="@+id/text_submenu_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_menu_4"
                    android:text="@string/big_words"
                    android:textSize="@dimen/menu_small_letters"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.30"
        android:orientation="horizontal">
        <RelativeLayout
            android:id="@+id/menu_button_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/purpleish_color">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/text_menu_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/menu_big_letters"
                    android:text="@string/madrid"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:id="@+id/text_submenu_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_menu_5"
                    android:text="@string/capital_cities"
                    android:textSize="@dimen/menu_small_letters"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/menu_button_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/green_vivid_color">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/text_menu_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/menu_sentences_size"
                    android:text="@string/like_football"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:id="@+id/text_submenu_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_menu_6"
                    android:text="@string/small_sentences"
                    android:textSize="@dimen/menu_small_letters"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.20"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/gesture_line_color">
            <TextView
                android:id="@+id/menu_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/menu_huge_letters"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/a"
                android:textColor="@android:color/white"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/orange_color">
            <TextView
                android:id="@+id/menu_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/menu_huge_letters"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/a"
                android:textColor="@android:color/white"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>