<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_marginTop="@dimen/activity_extra_vertical_margin">
        <ImageView
            android:id="@+id/splash_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/bottom_splash_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>
        <TextView
            android:id="@+id/splash_phrase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/splash_phrase"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/activity_extra_horizontal_margin"
            android:textSize="@dimen/splash_phrase_size"
            android:textColor="@color/green_font_color"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">
        <TextView
            android:id="@+id/version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:layout_marginTop="@dimen/activity_extra_vertical_margin"
            android:layout_centerHorizontal="true"
            android:textColor="@color/green_font_color"
            android:textSize="@dimen/splash_small_size"/>
        <ProgressBar
            android:id="@+id/splash_progress"
            style="@android:style/Widget.Material.Light.ProgressBar.Small"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible"
            android:background="@android:color/transparent"
            android:paddingTop="@dimen/activity_vertical_margin" />
        <TextView
            android:id="@+id/splash_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/splash_progress"
            android:text="@string/loading"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/small_margin"
            android:textColor="@android:color/white"
            android:textSize="@dimen/splash_small_size"/>

    </RelativeLayout>
</LinearLayout>