<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" tools:context=".MainActivity"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:background="@color/orange_color">
        <ImageButton
            android:id="@+id/home_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home"
            android:paddingTop="@dimen/micro_margin"
            android:paddingLeft="@dimen/micro_margin"
            android:background="@android:color/transparent"/>
        <TextView
            android:id="@+id/top_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/top_dashboard_text_size"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/current_letter"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/current_letter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/top_dashboard_small_text_size"
            android:layout_below="@+id/top_description"
            android:layout_centerHorizontal="true"
            android:text="@string/small_letters"
            android:textColor="@android:color/white"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/current_letter"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_double_vertical_margin">
            <TextView
                android:id="@+id/top_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00"
                android:layout_alignParentBottom="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/top_dashboard_big_text_size"/>
            <TextView
                android:id="@+id/top_timer_secs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/secs"
                android:textColor="@android:color/white"
                android:layout_toRightOf="@+id/top_timer"
                android:layout_alignParentBottom="true"
                android:paddingBottom="@dimen/small_margin"
                android:textSize="@dimen/top_dashboard_text_size"/>
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15">
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shadow_separator"/>
        <LinearLayout
            android:id="@+id/scores_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginRight="@dimen/small_margin">
                <TextView
                    android:id="@+id/your_best_score_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/best_score"
                    android:textSize="@dimen/score_desc_text_size"
                    android:textColor="@color/orange_color"/>
                <TextView
                    android:id="@+id/your_best_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/your_best_score_desc"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/orange_color"
                    android:textSize="@dimen/score_text_size"
                    android:text="11secs " />
            </RelativeLayout>
            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/orange_color"
                android:layout_marginTop="@dimen/micro_margin"
                android:layout_marginBottom="@dimen/micro_margin"/>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginLeft="@dimen/small_margin">
                <TextView
                    android:id="@+id/your_worst_score_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/worst_score"
                    android:textSize="@dimen/score_desc_text_size"
                    android:textColor="@color/orange_color"/>
                <TextView
                    android:id="@+id/your_worst_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/your_worst_score_desc"
                    android:layout_alignParentLeft="true"
                    android:textSize="@dimen/score_text_size"
                    android:textColor="@color/orange_color"
                    android:text="11secs " />
            </RelativeLayout>
        </LinearLayout>
        </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.55">
        <android.gesture.GestureOverlayView
            android:id="@+id/blankView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:fadeDuration="@integer/gesture_fade_out_time"
            android:fadeOffset="@integer/gesture_fade_out_time"
            android:gestureStrokeType="multiple"
            android:alwaysDrawnWithCache="true"
            android:gestureStrokeWidth="25"
            android:layout_marginBottom="@dimen/activity_extra_vertical_margin"
            android:gestureColor="@color/gesture_line_color"
            android:uncertainGestureColor="@color/gesture_line_color">
        </android.gesture.GestureOverlayView>
    </RelativeLayout>
</LinearLayout>
</RelativeLayout>